# povis

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  StateInfo.h
assets/common/shaders/: circle.geom  circle.vert  compose_framebuffers.frag  default_mvp.vert  deferred.frag  deferred_shading_pass.frag  deferred_ui_pass.frag  rectangle.frag  rectangle.geom  rectangle.vert  sprite.frag  sprite.vert
assets/shaders/: basic.frag  basic.vert  bullethell.frag  bullethell.vert  deferred_geometry.frag  deferred_light.frag  geometry.frag  geometry.vert  light.frag  sprite.frag  test.frag  test.vert
assets/xff2/shaders/: background.frag  compose_framebuffers.frag  fadeInOut.frag  hitbox_circle.frag  hitpoints.frag  hitpoints.vert  lighting.frag  shading.frag  shading.vert  sprite.frag  sprite.vert
assets/xff2/shaders/bullets/: bulletRed01.frag  bulletRed01.vert  bullet_default.frag  bullet_playertest.frag
cmake/: FindSDL2_image.cmake
src/: AABB.h  Area.cpp  Area.h  Entity.h  Game.cpp  Game.h  GameState.h  GameStateTest.cpp  GameStateTest.h  Graphics.cpp  Graphics.h  Logger.h  Timer.cpp  Timer.h  World.cpp  World.h  Zone.h  povis.cpp  v2.h
src/Interpolation/: Back.cpp  Back.h  Bounce.cpp  Bounce.h  Circ.cpp  Circ.h  Cubic.cpp  Cubic.h  Elastic.cpp  Elastic.h  Expo.cpp  Expo.h  Interpolator.cpp  Interpolator.h  InterpolatorQueue.h  Linear.cpp  Linear.h  Quad.cpp  Quad.h  Quart.cpp  Quart.h  Quint.cpp  Quint.h  Sine.cpp  Sine.h
src/easing/: Back.cpp  Back.h  Bounce.cpp  Bounce.h  Circ.cpp  Circ.h  Cubic.cpp  Cubic.h  Elastic.cpp  Elastic.h  Expo.cpp  Expo.h  Linear.cpp  Linear.h  Quad.cpp  Quad.h  Quart.cpp  Quart.h  Quint.cpp  Quint.h  Sine.cpp  Sine.h
src/game/: GameStateMain.cpp  GameStateMain.h
src/game/dev/: GameStateStartScreen.cpp  GameStateStartScreen.h
src/game/xff2/: Background.cpp  Background.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  BulletHell.cpp  BulletHell.h  BulletInstance.cpp  BulletInstance.h  BulletPattern.cpp  BulletPattern.h  BulletType.cpp  BulletType.h  Bullets.cpp  Bullets.h  Enemy.cpp  Enemy.h  EnemyCirno.cpp  EnemyCirno.h  EnemyFairy1.cpp  EnemyFairy1.h  EnemyGenericInvader.cpp  EnemyGenericInvader.h  EnemyInvaderBoss.cpp  EnemyInvaderBoss.h  EnemyTest.cpp  EnemyTest.h  EnemyYukari.cpp  EnemyYukari.h  Entity.cpp  Entity.h  GameStateDemo.cpp  GameStateDemo.h  GameStateGame.cpp  GameStateGame.h  GameStateStartScreen.cpp  GameStateStartScreen.h  GameStateTest.cpp  GameStateTest.h  (+19 more)
src/game/xff2/BulletPatterns/: BulletPatternInvaderBoss02.cpp  BulletPatternInvaderBoss02.h
src/render/: BatchPrimitives.cpp  BatchPrimitives.h  BatchSprite.cpp  BatchSprite.h  Camera.cpp  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelManager.cpp  ModelManager.h  ModelObject.cpp  ModelObject.h  Render.cpp  Render.h  RenderInfo.h  RenderManager.cpp  RenderManager.h  ResourceManager.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  ShaderManager.cpp  ShaderManager.h  ShaderObject.cpp  ShaderObject.h  Sprite.cpp  Sprite.h  SpriteFont.cpp  SpriteFont.h  SpriteFontString.cpp  SpriteFontString.h  TextureManager.cpp  TextureManager.h  (+7 more)
src/render/managers/: ModelManager.cpp  ModelManager.h  RenderManager.cpp  RenderManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  TextureManager.cpp  TextureManager.h  WindowManager.cpp  WindowManager.h
src/render/resource_managers/: ModelManager.cpp  ShaderManager.cpp  ShaderManager.h  SpriteManager.cpp  SpriteManager.h  TextureManager.cpp  TextureManager.h
src/render/resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelObject.cpp  ModelObject.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  ShaderObject.cpp  ShaderObject.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureObject.cpp  TextureObject.h  Vertex.h
src/render/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNodeObject.cpp  SceneNodeObject.h
src/utils/: to_string.h
